// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: match > match { x: 1 } | { x: a } -> a 1`] = `
{
  "displays": {
    "constraints": [
      "1 ~~ ?2",
      "Num ~~ ?4",
      "Schema [ x: ?6 ] ~~ Schema [ x: Num ]",
      "?6 ~~ ?6",
      "?6 ~~ ?8",
    ],
    "term": "match Struct [ x: 1 ]
| Struct [ x: a ] -> a",
    "type": "?8",
  },
}
`;

exports[`inference: match > match { x: 1 } | { x: a } -> a 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 45,
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "lvl": 0,
        "right": {
          "id": 41,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 44,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 43,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 4,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 56,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 54,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 52,
                  "type": "Neutral",
                  "value": {
                    "id": 51,
                    "type": "Var",
                    "variable": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 6,
                    },
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 53,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 55,
            "type": "App",
          },
        },
        "lvl": 0,
        "right": {
          "id": 49,
          "type": "Neutral",
          "value": {
            "arg": {
              "id": 47,
              "row": {
                "label": "x",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "id": 44,
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "id": 46,
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Schema",
              },
            },
            "icit": "Explicit",
            "id": 48,
            "type": "App",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 52,
          "type": "Neutral",
          "value": {
            "id": 51,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 52,
          "type": "Neutral",
          "value": {
            "id": 51,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 52,
          "type": "Neutral",
          "value": {
            "id": 51,
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "lvl": 0,
        "right": {
          "id": 60,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 8,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 40,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "id": 42,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 3,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "id": 50,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 5,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 6,
        },
      },
      "7": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 7,
        },
      },
      "8": {
        "ann": {
          "id": 59,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 7,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 8,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [
            [
              "a",
              {
                "id": 52,
                "type": "Neutral",
                "value": {
                  "id": 51,
                  "type": "Var",
                  "variable": {
                    "lvl": 0,
                    "type": "Meta",
                    "val": 6,
                  },
                },
              },
            ],
          ],
          "pattern": {
            "row": {
              "label": "x",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Binder",
                "value": "a",
              },
            },
            "type": "Struct",
          },
          "term": {
            "id": 1633,
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
        },
      ],
      "id": 1634,
      "scrutinee": {
        "arg": {
          "id": 1630,
          "row": {
            "label": "x",
            "row": {
              "type": "empty",
            },
            "type": "extension",
            "value": {
              "id": 1628,
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "id": 1629,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "id": 1631,
        "type": "App",
      },
      "type": "Match",
    },
    "type": {
      "id": 60,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 8,
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "match 1
| 1 -> 2",
    "type": "?2",
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "id": 21,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 20,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 22,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 22,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "id": 22,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "id": 24,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "id": 1,
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "id": 23,
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "alternatives": [
        {
          "binders": [],
          "pattern": {
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 1,
            },
          },
          "term": {
            "id": 814,
            "type": "Lit",
            "value": {
              "type": "Num",
              "value": 2,
            },
          },
        },
      ],
      "id": 815,
      "scrutinee": {
        "id": 813,
        "type": "Lit",
        "value": {
          "type": "Num",
          "value": 1,
        },
      },
      "type": "Match",
    },
    "type": {
      "id": 24,
      "type": "Var",
      "variable": {
        "lvl": 0,
        "type": "Meta",
        "val": 2,
      },
    },
    "typedTerms": {},
  },
}
`;
